# cprocessing

./: .gitigore  CMakeLists.txt  LICENCE.md  Makefile  README.md
examples/: examples
examples/3Dmesh/: 3Dmesh  main
examples/annotation/: annotation
examples/box/: Makefile  box  main
examples/colormode/: colormode  main.cpp
examples/cylinderline/: cylinderline  main
examples/ellipse/: ellipse  test  test.cpp
examples/ellipsemode/: ellipsemode
examples/keyboard/: keyboard
examples/mathtest/: mathtest
examples/pimage/: pimage
examples/randomrects/: randomrects
examples/rectangle/: Makefile  main.cpp
examples/scribble/: main  scribble
examples/sphere/: sphere
include/: cprocessing.hpp  fgl.h  gl.h  glx.h  glxint.h  glxproto.h
scripts/: ccc
src/: attributes.cpp  cprocessing.cpp  image.cpp  lights.cpp  primitives.cpp  text.cpp
